--- a/homework/mongo/donut-shop/donut_mongoose/views/donuts/edit.hbs
+++ b/homework/mongo/donut-shop/donut_mongoose/views/donuts/edit.hbs
@@ -7,8 +7,22 @@
 	<div id="edit-form" class="donut-container-show">
 
 
-		<<<<< YOUR WHOLE FORM GOES HERE >>>>>
+		<form action="/donuts/{{donut._id}}?_method=PUT" method="POST">
+			<label for="name">Name</label>
+			<input type="text" name="name">
 
+			<label for="description">Description</label>
+			<input type="text" name="description">
+
+			<label for="img">Image URL</label>
+			<input type="text" name="img">
+
+			<label for="price">Price</label>
+			<input type="number" name="price">
+
+			<label for="qty">On Hand</label>
+			<input type="number" name="qty">
+		</form>
 
 		<div id="img-preview">
 			<img src="{{donut.img}}">
